[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/enemies/mob/mob_1.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/mob/enemy-3-walking.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-behavior-tree-plugin/selector.gd" type="Script" id=3]
[ext_resource path="res://addons/godot-behavior-tree-plugin/behavior_tree.gd" type="Script" id=4]
[ext_resource path="res://addons/godot-behavior-tree-plugin/sequence.gd" type="Script" id=5]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/hit.gd" type="Script" id=6]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/takeDamage.gd" type="Script" id=7]
[ext_resource path="res://scripts/enemies/mob/behavior/wait.gd" type="Script" id=8]
[ext_resource path="res://scripts/enemies/mob/behavior/search.gd" type="Script" id=9]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_0/attack.gd" type="Script" id=10]
[ext_resource path="res://scripts/enemies/mob/behavior/in_range.gd" type="Script" id=11]
[ext_resource path="res://scripts/enemies/mob/behavior/follow.gd" type="Script" id=12]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throwable.gd" type="Script" id=13]
[ext_resource path="res://scripts/enemies/mob/behavior/mob_1/throw.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.2497, 49.393 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135.105, 38.7189 )

[sub_resource type="Animation" id=3]
resource_name = "a_pattern"
length = 1.63333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("hitbox/shape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.216667, 0.383333, 1.28333, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 31.5907

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 618.25, 48.393 )

[node name="mob" type="RigidBody2D"]
collision_layer = 4
mode = 2
mass = 2.04082
gravity_scale = 9.8
script = ExtResource( 1 )

[node name="hurtbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
<<<<<<< HEAD
position = Vector2( -9.041, 1.861 )
scale = Vector2( 0.227151, 0.189695 )
=======
position = Vector2( -4.825, -7.93857 )
scale = Vector2( 0.187952, 0.293039 )
>>>>>>> b04164e22af07b9876a608d901af33451e3303e0
texture = ExtResource( 2 )
hframes = 4

[node name="hitbox" type="Area2D" parent="."]
modulate = Color( 0.615686, 0.0862745, 0.0862745, 1 )
light_mask = 3
z_index = 1
collision_layer = 0
collision_mask = 34

[node name="shape" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 0.164706, 0.698039, 0.45098, 1 )
light_mask = 3
position = Vector2( -123.678, 2.37839 )
z_index = 1
shape = SubResource( 2 )
disabled = true

[node name="attack" type="AnimationPlayer" parent="."]
anims/a_pattern = SubResource( 3 )

[node name="pro_box" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="pro_shape" type="CollisionShape2D" parent="pro_box"]
shape = SubResource( 4 )
disabled = true

[node name="pro_box_wall" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="pro_shape" type="CollisionShape2D" parent="pro_box_wall"]
shape = SubResource( 4 )
disabled = true

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 4 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 3 )

[node name="BehaviorSequence3" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="throwable" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 13 )

[node name="throw" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence3"]
script = ExtResource( 14 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="hit" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 6 )

[node name="takeDamage" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 7 )

[node name="BehaviorSequence2" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 5 )

[node name="search" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 9 )

[node name="BehaviorSelector" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2"]
script = ExtResource( 3 )

[node name="BehaviorSequence" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 5 )

[node name="in_range" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 11 )

[node name="follow" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector/BehaviorSequence"]
script = ExtResource( 12 )

[node name="attack" type="Node" parent="BehaviorTree/BehaviorSelector/BehaviorSequence2/BehaviorSelector"]
script = ExtResource( 10 )

[node name="wait" type="Node" parent="BehaviorTree/BehaviorSelector"]
script = ExtResource( 8 )

[node name="chaseBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="chase_shape" type="CollisionShape2D" parent="chaseBox"]
shape = SubResource( 5 )

[node name="ThrowTime" type="Timer" parent="."]
wait_time = 0.3

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_parry_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_player_entered"]
[connection signal="body_entered" from="pro_box" to="." method="_on_pro_box_enemy_entered"]
[connection signal="body_entered" from="pro_box_wall" to="." method="_on_pro_box_wall_wall_entered"]
[connection signal="body_entered" from="chaseBox" to="." method="_on_chaseBox_body_entered"]
[connection signal="body_exited" from="chaseBox" to="." method="_on_chaseBox_body_exited"]
[connection signal="timeout" from="ThrowTime" to="." method="slowTimeThrow"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
